// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot > default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-ghWlax dMEeIv aje-input__text sc-ovuCP bVRgfS aje-input--default is-medium"
  >
    <label
      class="sc-blHHSb hjDrEC"
      for="react-aria-:r0:"
      id="react-aria-:r1:"
    >
      Text Label
    </label>
    <p
      class="sc-gtLWhw lRnnC is-auto"
      id="react-aria-:r3:"
    >
      message
    </p>
    <input
      aria-describedby="react-aria-:r3:"
      aria-labelledby="react-aria-:r1:"
      class="sc-fAUdSK cfCVRY"
      id="react-aria-:r0:"
      placeholder="placeholder"
      type="text"
      value="content"
    />
  </div>
</DocumentFragment>
`;

exports[`matches snapshot > floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-ghWlax dMEeIv aje-input__text sc-ovuCP bVRgfS aje-input--floating is-medium"
    data-float="true"
  >
    <div
      class="sc-gQaihK crAViC"
    >
      <input
        aria-describedby="react-aria-:r8:"
        aria-labelledby="react-aria-:r6:"
        class="sc-fAUdSK cfCVRY"
        data-float="true"
        id="react-aria-:r5:"
        placeholder="placeholder"
        type="text"
        value="content"
      />
      <label
        class="sc-blHHSb hjDrEC"
        for="react-aria-:r5:"
        id="react-aria-:r6:"
      >
        Text Label
      </label>
    </div>
    <p
      class="sc-gtLWhw lRnnC is-auto"
      id="react-aria-:r8:"
    >
      message
    </p>
  </div>
</DocumentFragment>
`;
